Inclusão da barra de rolagem e inclusão do mecanismo de incrementação de grupos de tarefas

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,9 @@ body {
   align-content: space-around;
   align-items: flex-start;
   gap: 40px;
+  overflow: scroll;
+  overflow: auto;
+  height: 100%;
 }
 
 #divbotao {
