Proecsso de implantação do mecanismo de geração de grupos e atividades

--- a/src/App.css
+++ b/src/App.css
@@ -51,8 +51,7 @@ body {
   align-items: flex-start;
   gap: 40px;
   overflow: scroll;
-  overflow: auto;
-  height: 100%;
+  height: calc(100vh - 48px);
 }
 
 #divbotao {
