Início implantação de mecanismo de input de novas tarefas

--- a/src/botao/botao.css
+++ b/src/botao/botao.css
@@ -1,8 +1,7 @@
-#botao_gen, #botao_grupo {
+#botao_gen {
     background-color: transparent;
     border: none;
     color: blue;
     font-size: 16pt;
     padding: 10px;
 }
-
