--- a/src/card/card.css
+++ b/src/card/card.css
@@ -1,13 +1,28 @@
 #card {
-    width: 200px;
-    margin: 10px;
-    padding: 5px 10px;
-    border-radius: 2px;
     background-color: white;
     color: black;
-    font-size:12pt;
-    font-weight: 550;
+    padding: 7px;
+    font: normal 10pt Arial; 
+    display: grid;
     border: solid;
-    border-color: gray;
     border-width: 1px;
+    gap: 5px;
+    justify-content: center;
+    margin: 5px;
+}
+
+#tarefa,#prazo {
+    width: 200px;
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+
+#tarefa {
+    text-align: justify;
+    border-bottom: solid;
+    border-width: 1px;
+    padding-bottom: 3px;
+    border-color: gray;
+
 }
